Added base content to bananabread.html

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -9,6 +9,36 @@
 
 <body>
     <h1>Banana Bread</h1>
+    <img src="https://static01.nyt.com/images/2020/04/08/dining/em-chocolate-chip-banana-bread/em-chocolate-chip-banana-bread-articleLarge.jpg" alt="banana bread with chocolate chips">
+    <h3>Banana bread is better with chocolate!</h3>
+    <p>This banana bread recipe is my absolute favorite! The base recipe is a classic banana bread recipe. The chocolate chips add a gooey decadance. Walnuts provide a bit of crunch to balance out all that ooey goodness.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>&frac12 cup butter, softened</li>
+        <li>2 eggs, beaten</li>
+        <li>1 &frac12 cups all-purpose flour</li>
+        <li>&frac12 teaspoon salt</li>
+        <li>1 cup granulated sugar</li>
+        <li>3-4 ripe bananas, finely crushed</li>
+        <li>1 teaspoon baking soda</li>
+        <li>&frac12 teaspoon vanilla extract</li>
+        <li>1 cup of semisweet chocolate chips</li>
+        <li>&frac12 cup of chopped walnuts</li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Preheat oven to 350&deg;F.</li>
+        <li>Cream together butter and sugar.</li>
+        <li>Add eggs, crushed bananas, and vanilla extract.</li>
+        <li>Combine well.</li>
+        <li>Sift together flour, baking soda, and salt.</li>
+        <li>Add sifted dry ingredients to creamed mixture.</li>
+        <li>Mix until just combined. Do not overmix.</li>
+        <li>Fold chocolate chips and  walnuts into mixture.</li>
+        <li>Pour into a greased and floured loaf pan.</li>
+        <li>Bake at 350&deg;F for 55 minutes.</li>
+    </ol>
+
 </body>
 
 </html>
