Added red-velvet-cookies.html and wrote base content.

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -4,7 +4,7 @@
     
 <head>
     <meta charset="UTF-8">
-    <title>Umbreen's Recipes</title>
+    <title>Banana Bread Recipe</title>
 </head>
 
 <body>
@@ -14,16 +14,16 @@
     <p>This banana bread recipe is my absolute favorite! The base recipe is a classic banana bread recipe. The chocolate chips add a gooey decadance. Walnuts provide a bit of crunch to balance out all that ooey goodness.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>&frac12 cup butter, softened</li>
+        <li>&frac12; cup butter, softened</li>
         <li>2 eggs, beaten</li>
-        <li>1 &frac12 cups all-purpose flour</li>
-        <li>&frac12 teaspoon salt</li>
+        <li>1 &frac12; cups all-purpose flour</li>
+        <li>&frac12; teaspoon salt</li>
         <li>1 cup granulated sugar</li>
         <li>3-4 ripe bananas, finely crushed</li>
         <li>1 teaspoon baking soda</li>
-        <li>&frac12 teaspoon vanilla extract</li>
+        <li>&frac12; teaspoon vanilla extract</li>
         <li>1 cup of semisweet chocolate chips</li>
-        <li>&frac12 cup of chopped walnuts</li>
+        <li>&frac12; cup of chopped walnuts</li>
     </ul>
     <h2>Instructions</h2>
     <ol>
