Added and linked CSS

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Umbreen's Recipes</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://hips.hearstapps.com/harpersbazaaruk.cdnds.net/16/43/1477325518-cooking-books.jpg" alt="old recipe book with wooden rolling pin">
     <ul>
         <li><a href="recipes/bananabread.html">Banana Bread Recipe</a></li>
         <li><a href="recipes/crinkle-cookies.html">Mexican Chocolate Crinkle Cookies Recipe</a></li>
