--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -5,13 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Banana Bread Recipe</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <h1>Banana Bread</h1>
     <img src="https://static01.nyt.com/images/2020/04/08/dining/em-chocolate-chip-banana-bread/em-chocolate-chip-banana-bread-articleLarge.jpg" alt="banana bread with chocolate chips">
     <h3>Banana bread is better with chocolate!</h3>
-    <p>This banana bread recipe is my absolute favorite! The base recipe is a classic banana bread recipe. The chocolate chips add a gooey decadance. Walnuts provide a bit of crunch to balance out all that ooey goodness.</p>
+    <div class="intro-paragraph"><p>This banana bread recipe is my absolute favorite! The base recipe is a classic banana bread recipe. The chocolate chips add a gooey decadance. Walnuts provide a bit of crunch to balance out all that ooey goodness.</p></div>
     <h2>Ingredients</h2>
     <ul>
         <li>&frac12; cup butter, softened</li>
