--- a/recipes/crinkle-cookies.html
+++ b/recipes/crinkle-cookies.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Mexican Chocolate Crinkle Cookies</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Mexican Chocolate Crinkle Cookies</h1>
         <img src="https://assets.marthastewart.com/styles/wmax-750/d34/chocolate-crackles-hol05-msd101473/chocolate-crackles-hol05-msd101473_horiz.jpg?itok=8yA1vnTW" alt="stacked Mexican chocolate crinkle cookies">
         <h3>Mexican chocolate crinkle cookies look fancy and taste delicious!</h3>
-        <p>The powdered sugar coating on these cookies offer a crisp contrast to the fudgy inside texture. The combination of mocha, cinnamon, and cayenne is delightful!</p>
+        <div class="intro-paragraph"><p>The powdered sugar coating on these cookies offer a crisp contrast to the fudgy inside texture. The combination of mocha, cinnamon, and cayenne is delightful!</p></div>
         <h2>Ingredients</h2>
         <ul>
             <li>1 cup unsweetened cocoa powder</li>
